--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
     "apollo-server-express": "^1.3.0",
     "body-parser": "^1.18.2",
     "casual": "^1.5.19",
+    "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.2",
     "graphql": "^0.11.7",
     "graphql-tools": "^2.13.0",
+    "helmet": "^3.13.0",
+    "https": "^1.0.0",
     "lodash": "^4.17.10",
     "mongoose": "^4.13.2",
+    "mysql": "^2.16.0",
     "node-fetch": "^1.7.3",
+    "passport": "^0.4.0",
     "sequelize": "^4.38.0",
     "sqlite": "^2.9.2",
     "winston": "^3.0.0"
