Updated project to remove babel dependency. This will remove an additional library which I think won't be necessary

--- a/package.json
+++ b/package.json
@@ -24,8 +24,6 @@
     "winston": "^3.0.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
     "nodemon": "^1.12.1"
   },
   "babel": {
@@ -34,7 +32,7 @@
     ]
   },
   "scripts": {
-    "start": "nodemon ./server.js --exec babel-node"
+    "start": "nodemon ./server.js"
   },
   "author": "Brett Bisesti (bbisesti)",
   "license": "ISC"
